Changelog
=========

0.0.4 (unreleased)
------------------

- Nothing changed yet.


0.0.3 (2011-09-02)
------------------

- Nothing changed yet.


0.0.2 (2011-08-08)
------------------

- Fix commit missing from merge
- Fix python2.4 support


0.0.1 (2011-08-05)
------------------

 - Add overlay recipe

0.0.0 (a long long time ago..)
------------------------------

 - Initial release
