@@ -4,13 +4,14 @@ Changelog
 0.0.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- All stacks automatically get a 'path' variable that points to their assets
+- Fix sibpath for namespaced modules
 
 
 0.0.3 (2011-09-02)
 ------------------
 
-- Nothing changed yet.
+- Add 'Stack': a utility for packaging buildout as an egg.
 
 
 0.0.2 (2011-08-08)
